compiler/tests/fixtures/type_err/list_get_non_int_index.yb
pub main() -> Int {
  xs := [1, 2, 3]
  xs.get("0")
}
